add quick-draft desktop

--- a/src/app/util/format-select/format.component.html
+++ b/src/app/util/format-select/format.component.html
@@ -4,7 +4,11 @@
     'full-screen-on-mobile': formatSelect.panelOpen,
   }"
 >
-  <mat-form-field class="w-full" [ngClass]="classList">
+  <mat-form-field
+    class="w-full"
+    [ngClass]="classList"
+    [appearance]="appearance"
+  >
     <mat-label>Format</mat-label>
     <mat-select
       [value]="selectedFormat"
