rename sprite component

--- a/src/app/battle-zone/tier-list/tier-list.component.html
+++ b/src/app/battle-zone/tier-list/tier-list.component.html
@@ -142,7 +142,7 @@
                           }"
                         >
                           <div class="tier-sprite">
-                            <sprite [pid]="pokemon.id"></sprite>
+                            <pdz-sprite [pid]="pokemon.id"></pdz-sprite>
                           </div>
                           <div>
                             {{ pokemon.name }}
