--- a/src/app/drafts/draft-overview/draft-stats/draft-stats.component.html
+++ b/src/app/drafts/draft-overview/draft-stats/draft-stats.component.html
@@ -21,7 +21,10 @@
             <th cdk-header-cell *cdkHeaderCellDef></th>
             <td cdk-cell *cdkCellDef="let element">
               <div class="sprite-wrapper">
-                <sprite [flipped]="true" [pokemon]="element.pokemon"></sprite>
+                <pdz-sprite
+                  [flipped]="true"
+                  [pokemon]="element.pokemon"
+                ></pdz-sprite>
               </div>
             </td>
           </ng-container>
