--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -117,7 +117,7 @@
                         track pokemon
                       ) {
                         <div class="sprite-wrapper">
-                          <sprite [pokemon]="pokemon" flipped></sprite>
+                          <pdz-sprite [pokemon]="pokemon" flipped></pdz-sprite>
                           <div class="capt-label">
                             @if (pokemon.capt?.tera) {
                               <mat-icon svgIcon="tera"></mat-icon>
@@ -157,7 +157,7 @@
                         track pokemon
                       ) {
                         <div class="sprite-wrapper">
-                          <sprite [pokemon]="pokemon"></sprite>
+                          <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
                           <div class="capt-label">
                             @if (pokemon.capt?.tera) {
                               <mat-icon svgIcon="tera"></mat-icon>
