--- a/src/app/drafts/matchup-overview/matchup/overview/overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup/overview/overview.component.html
@@ -37,7 +37,7 @@
       @for (pokemon of ($teams | async)![0]; track pokemon) {
         <div class="overview-row">
           <div class="sprite-cell">
-            <sprite [pokemon]="pokemon" flipped></sprite>
+            <pdz-sprite [pokemon]="pokemon" flipped></pdz-sprite>
           </div>
           <div class="name-cell">
             <div class="name-label">{{ pokemon.name }}</div>
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="sprite-cell">
-            <sprite [pokemon]="pokemon"></sprite>
+            <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
           </div>
         </div>
       }
