--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -46,7 +46,7 @@
           </mat-form-field>
         </div>
         <div class="sprite-wrapper">
-          <sprite [pokemon]="example"></sprite>
+          <pdz-sprite [pokemon]="example"></pdz-sprite>
         </div>
       </div>
     </div>
