--- a/src/app/planner/team/team.component.html
+++ b/src/app/planner/team/team.component.html
@@ -30,11 +30,11 @@
             >
               <div *cdkDragPreview>
                 @if (teamCtrl.controls.pokemon.value) {
-                  <sprite
+                  <pdz-sprite
                     [flipped]="true"
                     [pokemon]="teamCtrl.controls.pokemon.value"
                   >
-                  </sprite>
+                  </pdz-sprite>
                 }
               </div>
               <td>
@@ -45,11 +45,11 @@
               <td>
                 <div class="sprite-wrapper">
                   @if (teamCtrl.controls.pokemon.value) {
-                    <sprite
+                    <pdz-sprite
                       [flipped]="true"
                       [pokemon]="teamCtrl.controls.pokemon.value"
                     >
-                    </sprite>
+                    </pdz-sprite>
                   }
                 </div>
               </td>
