--- a/src/app/tools/finder/finder-core.component.html
+++ b/src/app/tools/finder/finder-core.component.html
@@ -246,10 +246,10 @@
         >
           <td class="p-2 flex justify-center">
             <div class="max-w-20 min-w-10">
-              <sprite
+              <pdz-sprite
                 [flipped]="true"
                 [pokemon]="{ id: pokemon.id, name: pokemon.name }"
-              ></sprite>
+              ></pdz-sprite>
             </div>
           </td>
           <td class="p-2 text-center">{{ pokemon.name }}</td>
