--- a/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.html
+++ b/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.html
@@ -47,7 +47,7 @@
   @for (pokemon of draft; track $index) {
     <div class="draft-pokemon">
       <div class="sprite-wrapper">
-        <sprite [pokemon]="pokemon"></sprite>
+        <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
       </div>
 
       <div class="draft-info">
