--- a/src/app/util/matchup/movechart-core/moves.component.html
+++ b/src/app/util/matchup/movechart-core/moves.component.html
@@ -54,7 +54,7 @@
             <div class="pokemon-container">
               @for (pokemon of move.pokemon; track $index) {
                 <div class="sprite-wrapper">
-                  <sprite [pokemon]="pokemon"></sprite>
+                  <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
                 </div>
               }
             </div>
