--- a/src/app/util/matchup/summary-core/summary-core.component.html
+++ b/src/app/util/matchup/summary-core/summary-core.component.html
@@ -11,7 +11,7 @@
     <ng-container cdkColumnDef="sprite">
       <th cdk-header-cell *cdkHeaderCellDef></th>
       <td cdk-cell *cdkCellDef="let pokemon">
-        <sprite size="3rem" flipped [pokemon]="pokemon"></sprite>
+        <pdz-sprite size="3rem" flipped [pokemon]="pokemon"></pdz-sprite>
       </td>
       <td
         cdk-footer-cell
