--- a/src/app/util/matchup/typechart/typechart-core/typechart-core.component.html
+++ b/src/app/util/matchup/typechart/typechart-core/typechart-core.component.html
@@ -41,13 +41,13 @@
           <td class="action-cell" (click)="toggleVisible(pokemon)">
             <div class="flex-wrapper">
               <div class="sprite-wrapper">
-                <sprite
+                <pdz-sprite
                   size="3rem"
                   tooltipPosition="left"
                   [disabled]="pokemon.disabled"
                   flipped
                   [pokemon]="pokemon"
-                ></sprite>
+                ></pdz-sprite>
               </div>
             </div>
           </td>
