--- a/src/app/drafts/draft-overview/draft-archives/draft-archives.component.html
+++ b/src/app/drafts/draft-overview/draft-archives/draft-archives.component.html
@@ -37,10 +37,10 @@
             </div>
           </div>
           <div class="grid grid-cols-6 px-4 pt-2 sprites">
-            <sprite
+            <pdz-sprite
               *ngFor="let pokemon of archive.team"
               [pokemon]="{ id: pokemon.id, name: pokemon.name }"
-            ></sprite>
+            ></pdz-sprite>
           </div>
         </div>
         <div class="flex p-2" *ngIf="archive.menu == 'main'">
