--- a/src/app/drafts/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/drafts/draft-overview/draft-preview/draft-preview.component.html
@@ -31,10 +31,10 @@
             </div>
           </div>
           <div class="grid grid-cols-6 gap-1 px-4 pt-2 sprites">
-            <sprite
+            <pdz-sprite
               *ngFor="let pokemon of draft.team"
               [pokemon]="pokemon"
-            ></sprite>
+            ></pdz-sprite>
           </div>
         </div>
         <div class="flex p-2" *ngIf="draft.menu == 'main'">
