--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.html
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.html
@@ -1,6 +1,6 @@
 <div class="tier-row">
   <div class="sprite-wrapper">
-    <sprite [pokemon]="tier.pokemon" flipped></sprite>
+    <pdz-sprite [pokemon]="tier.pokemon" flipped></pdz-sprite>
   </div>
   <div class="modifier-container">
     @for (modifier of tier.modifiers; track modifier) {
