--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -6,13 +6,13 @@
     <div
       class="h-auto p-1 m-1 shadow-md sm:p-2 sm:m-2 bg-aTeam-300 rounded-xl shadow-aTeam-600 grid grid-cols-1 gap-1"
     >
-      <sprite
+      <pdz-sprite
         class=""
         *ngFor="let pokemon of draft.team"
         [pokemon]="pokemon"
         [flipped]="true"
       >
-      </sprite>
+      </pdz-sprite>
     </div>
   </div>
   <div
@@ -63,10 +63,10 @@
               </div>
             </div>
             <div class="grid grid-cols-6 gap-1 px-4 pt-2 sprites">
-              <sprite
+              <pdz-sprite
                 *ngFor="let pokemon of matchup.team"
                 [pokemon]="pokemon"
-              ></sprite>
+              ></pdz-sprite>
             </div>
           </div>
           <div
