--- a/src/app/drafts/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/drafts/opponent-overview/opponent-score/opponent-score.component.html
@@ -162,11 +162,11 @@
                   formGroupName="{{ i }}"
                 >
                   <div class="flex">
-                    <sprite
+                    <pdz-sprite
                       class="w-2/5 h-fit"
                       [ngClass]="spriteBrought(pokemonForm)"
                       [pokemon]="pokemonForm.value.pokemon"
-                    ></sprite>
+                    ></pdz-sprite>
                     <div
                       class="flex flex-col justify-center w-3/5 itmes-center"
                     >
@@ -276,11 +276,11 @@
                   formGroupName="{{ i }}"
                 >
                   <div class="flex">
-                    <sprite
+                    <pdz-sprite
                       class="w-2/5 h-fit"
                       [ngClass]="spriteBrought(pokemonForm)"
                       [pokemon]="pokemonForm.value.pokemon"
-                    ></sprite>
+                    ></pdz-sprite>
                     <div
                       class="flex flex-col justify-center w-3/5 itmes-center"
                     >
