--- a/src/app/tools/random-draft/random-draft.component.html
+++ b/src/app/tools/random-draft/random-draft.component.html
@@ -21,7 +21,7 @@
   @if (team.length > 0) {
     <div class="w-full max-w-md grid grid-cols-4">
       @for (pokemon of team; track $index) {
-        <sprite [pokemon]="pokemon"></sprite>
+        <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
       }
     </div>
 
