fixed quick matchup, add mobile quick matchup

--- a/src/app/images/sprite/sprite.component.html
+++ b/src/app/images/sprite/sprite.component.html
@@ -14,5 +14,6 @@
     src="{{ path }}"
     onerror="this.src='../../../../assets/icons/unknown.svg'"
     (error)="fallback()"
+    (load)="onSpriteLoaded()"
   />
 }
