--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.html
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.html
@@ -1,5 +1,5 @@
 <div class="draft-section">
-  <div class="box-wrapper">
+  <div class="box-wrapper pdz-hidden-on-small">
     <div class="info-box">
       <div class="box-title">Pokemon Overview</div>
       <div class="box-body">
