--- a/src/app/util/forms/team-form/team-form.component.scss
+++ b/src/app/util/forms/team-form/team-form.component.scss
@@ -28,7 +28,7 @@
         height: fit-content;
         align-items: center;
         height: 4rem;
-        sprite {
+        pdz-sprite {
           flex-shrink: 0;
           margin: 2px 0;
           max-width: 4rem;
