--- a/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.scss
@@ -1,21 +1,35 @@
-.draft-container {
+.draft-container-wrapper {
   border: 2px solid var(--mat-sys-outline-variant);
+  height: 100%;
+  width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  padding: 0 1rem;
+  border-radius: 2rem;
+}
+
+.draft-container {
   display: flex;
   flex-wrap: wrap;
-  box-shadow: var(--mat-sys-level2);
   padding: 1rem;
-  border-radius: 2rem;
   width: fit-content;
   align-items: center;
   justify-content: center;
+  overflow-y: auto;
 
   font-family: var(--pdz-font-fancy);
-
   .draft-pokemon {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+
+    .sprite-wrapper {
+      width: 50%;
+      height: 50%;
+    }
   }
 }
 
@@ -23,18 +37,20 @@ h2 {
   color: var(--mat-sys-primary);
 }
 
-.options-bar {
-  display: flex;
-  gap: 1rem;
-}
-
 :host {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0rem;
 }
 
-.option-tier {
-  color: var(--mat-sys-primary);
+.type-label {
+  align-items: center;
+  display: flex;
+  width: 3.5rem;
+  height: 1.5rem;
+
+  .type-text {
+    font-size: 0.8em;
+    line-height: 1.5em;
+  }
 }
