--- a/src/app/tools/quick-draft/quick-draft.component.scss
+++ b/src/app/tools/quick-draft/quick-draft.component.scss
@@ -7,6 +7,9 @@
   height: 100%;
   width: 100%;
   overflow-y: auto;
+  @media (max-width: 768px) {
+    padding: 1rem 1rem;
+  }
 }
 
 h1,
@@ -17,25 +20,36 @@ h3 {
 
 h1 {
   font-size: 2em;
+  @media (max-width: 768px) {
+    font-size: 1.75em;
+  }
 }
 
 h2 {
   font-size: 1.5em;
+  text-align: center;
+  @media (max-width: 768px) {
+    font-size: 1.25em;
+  }
 }
 
 h3 {
   font-size: 1.25em;
+  @media (max-width: 768px) {
+    font-size: 1.15em;
+  }
 }
 
 .qd-option {
   box-shadow: var(--mat-sys-level2);
   border-radius: 1rem;
   border: 2px solid var(--mat-sys-outline-variant);
-
+  margin: 4px;
   &.selected {
     border: 6px solid var(--mat-sys-outline);
     background-color: var(--mat-sys-primary-container);
     color: var(--mat-sys-on-primary-container);
+    margin: 0px;
   }
 
   &:not(.selected):hover {
@@ -46,10 +60,21 @@ h3 {
 .qd-option-container {
   display: flex;
   column-gap: 2rem;
-  height: 100%;
+  max-height: 100%;
+  height: fit-content;
   width: 100%;
   justify-content: center;
   align-items: center;
+  @media (max-width: 768px) {
+    column-gap: 0.5rem;
+  }
+}
+
+.option-tier {
+  font-size: 0.8em;
+  font-weight: 800;
+  font-family: var(--pdz-font-regular);
+  color: var(--mat-sys-primary);
 }
 
 .qd-spacer {
@@ -58,8 +83,12 @@ h3 {
 
 .qd-options-bar {
   display: flex;
-  gap: 1rem;
-  margin-bottom: -1rem;
+  column-gap: 1rem;
+  row-gap: 0.25rem;
+  align-items: center;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .type-container {
