change random draft to quick draft

--- a/src/app/pages/top-navbar/top-navbar.component.html
+++ b/src/app/pages/top-navbar/top-navbar.component.html
@@ -40,9 +40,9 @@
         <mat-icon>search</mat-icon>
         <span> Pokemon Search </span>
       </button>
-      <button mat-menu-item routerLink="/tools/random-draft">
+      <button mat-menu-item routerLink="/tools/quick-draft">
         <mat-icon>casino</mat-icon>
-        <span> Random Draft </span>
+        <span> Quick Draft </span>
       </button>
     </mat-menu>
     <button
