--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
@@ -158,6 +158,7 @@
 .box-body {
   font-family: var(--pdz-font-fancy);
   display: flex;
+  height: 100%;
   @media (min-width: 768px) {
     flex-direction: column;
   }
