--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
@@ -9,11 +9,12 @@
   width: fit-content;
   max-width: 30%;
   min-height: fit-content;
-  height: 100%;
+  max-height: fit-content;
+  max-height: 16rem;
   user-select: none;
   .sprite-wrapper {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
   }
 }
 
