--- a/src/app/tools/quick-draft/quick-draft-setting/quick-draft-setting.component.html
+++ b/src/app/tools/quick-draft/quick-draft-setting/quick-draft-setting.component.html
@@ -23,5 +23,44 @@
     </button>
   }
 </div>
+<div
+  class="custom-button qd-template qd-option"
+  (click)="selectedTemplate = null"
+  [ngClass]="{
+    selected: null == selectedTemplate,
+  }"
+>
+  <div class="button-header">Custom</div>
+  <div
+    class="custom-options-container"
+    [@expandCollapse]="selectedTemplate === null ? 'expanded' : 'collapsed'"
+  >
+    <div class="custom-option">
+      <span class="option-label">
+        Rerolls: {{ customTemplateForm.rerolls }}
+      </span>
+      <mat-slider showTickMarks min="0" max="10" step="1">
+        <input matSliderThumb [(ngModel)]="customTemplateForm.rerolls" />
+      </mat-slider>
+    </div>
+    <div class="custom-tier-options">
+      @for (tier of customTemplateTiers; track $index) {
+        <div class="custom-option">
+          <span class="option-label"> {{ tier[0] }}: {{ tier[1] }} </span>
+          <mat-slider showTickMarks min="0" max="10" step="1">
+            <input matSliderThumb [(ngModel)]="tier[1]" />
+          </mat-slider>
+        </div>
+      }
+    </div>
+  </div>
+</div>
 <div class="qd-spacer"></div>
-<button mat-flat-button (click)="continue()">Continue to Draft</button>
+<button
+  class="continue-button"
+  mat-flat-button
+  (click)="continue()"
+  [disabled]="validTemplate()"
+>
+  Continue to Draft
+</button>
