--- a/src/app/tools/quick-draft/quick-draft-setting/quick-draft-setting.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-setting/quick-draft-setting.component.scss
@@ -4,6 +4,12 @@
   align-items: center;
   row-gap: 1rem;
   height: 100%;
+  width: fit-content !important;
+  max-width: 100%;
+  overflow: hidden;
+  @media (max-width: 768px) {
+    overflow-y: auto;
+  }
 }
 
 h1,
@@ -34,7 +40,8 @@ h2 {
 
   @media (max-width: 768px) {
     padding: 0.5rem;
-
+    min-height: 0;
+    height: fit-content;
     .qd-header {
       font-size: 1.15em;
     }
@@ -53,11 +60,55 @@ h2 {
   .qd-tier {
     text-align: center;
     min-width: fit-content;
-    width: 33.333333%;
+    width: 30%;
     padding: 0 0.25rem;
   }
 }
 
 .qd-options-bar {
   margin-bottom: -1rem;
+}
+
+.custom-button {
+  width: 100% !important;
+  min-height: fit-content;
+  max-height: fit-content;
+  gap: 0;
+
+  .custom-options-container {
+    .custom-option {
+      width: fit-content;
+      display: flex;
+      align-items: center;
+      column-gap: 1rem;
+
+      justify-content: space-between;
+    }
+
+    .option-label {
+      font-size: 0.8em;
+    }
+    .custom-tier-options {
+      display: grid;
+      column-gap: 2rem;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+      }
+      .custom-option {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.qd-option-container {
+  @media (max-width: 768px) {
+    flex-direction: column;
+    row-gap: 0.25rem;
+  }
+}
+
+.continue-button {
+  flex-shrink: 0;
 }
