--- a/src/app/league-zone/league-schedule-matchup/league-schedule-matchup.component.html
+++ b/src/app/league-zone/league-schedule-matchup/league-schedule-matchup.component.html
@@ -91,7 +91,7 @@
                   fainted: pokemon.status === 'fainted',
                 }"
               >
-                <sprite [pokemon]="pokemon" flipped> </sprite>
+                <pdz-sprite [pokemon]="pokemon" flipped> </pdz-sprite>
               </div>
             }
           </div>
@@ -136,7 +136,7 @@
                   fainted: pokemon.status === 'fainted',
                 }"
               >
-                <sprite [pokemon]="pokemon"> </sprite>
+                <pdz-sprite [pokemon]="pokemon"> </pdz-sprite>
               </div>
             }
           </div>
