--- a/src/app/league-zone/league-standings/pokemon-standings/pokemon-standings.component.html
+++ b/src/app/league-zone/league-standings/pokemon-standings/pokemon-standings.component.html
@@ -30,7 +30,7 @@
             </td>
             <td>
               <div class="logo-cell">
-                <sprite flipped [pokemon]="pokemon"></sprite>
+                <pdz-sprite flipped [pokemon]="pokemon"></pdz-sprite>
               </div>
             </td>
             <td>
