--- a/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
+++ b/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
@@ -59,7 +59,7 @@
               <tr>
                 <td class="cell-sprite">
                   <div class="sprite-wrapper">
-                    <sprite [pokemon]="pokemon" flipped></sprite>
+                    <pdz-sprite [pokemon]="pokemon" flipped></pdz-sprite>
                   </div>
                 </td>
                 <td class="cell-name">
@@ -102,7 +102,7 @@
               <tr>
                 <td class="cell-sprite">
                   <div class="sprite-wrapper">
-                    <sprite flipped [pokemon]="pokemon"></sprite>
+                    <pdz-sprite flipped [pokemon]="pokemon"></pdz-sprite>
                   </div>
                 </td>
                 <td class="cell-name">
