--- a/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.html
@@ -36,7 +36,7 @@
             >
               <div *cdkDragPlaceholder class="drag-placeholder"></div>
               <div class="entry-sprite">
-                <sprite [pid]="pokemon.id"></sprite>
+                <pdz-sprite [pid]="pokemon.id"></pdz-sprite>
               </div>
               <div class="entry-name">
                 {{ pokemon.name }}
@@ -106,7 +106,7 @@
                             class="drag-placeholder"
                           ></div>
                           <div class="entry-sprite">
-                            <sprite [pid]="pokemon.id"></sprite>
+                            <pdz-sprite [pid]="pokemon.id"></pdz-sprite>
                           </div>
                           <div class="entry-name">
                             {{ pokemon.name }}
