--- a/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.html
@@ -4,7 +4,7 @@
   <div mat-dialog-content class="dialog-layout">
     <div class="left-column">
       <div class="sprite-container">
-        <sprite [pokemon]="data.pokemon"></sprite>
+        <pdz-sprite [pokemon]="data.pokemon"></pdz-sprite>
       </div>
       <div class="toggle-section">
         <pdz-slide-toggle onSVG="tera" offSVG="tera"> Tera </pdz-slide-toggle>
