--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -23,7 +23,7 @@
                       }"
                     >
                       <div class="entry-sprite">
-                        <sprite [pid]="pokemon.id"></sprite>
+                        <pdz-sprite [pid]="pokemon.id"></pdz-sprite>
                       </div>
                       <div class="entry-name">
                         {{ pokemon.name }}
