--- a/src/app/league-zone/league-trades/trade-card/trade-card.component.html
+++ b/src/app/league-zone/league-trades/trade-card/trade-card.component.html
@@ -16,7 +16,7 @@
             <div class="pokemon-info">
               <div class="pokemon-tier">{{ pokemon.tier }}</div>
               <div class="sprite-wrapper small">
-                <sprite [pokemon]="pokemon" flipped></sprite>
+                <pdz-sprite [pokemon]="pokemon" flipped></pdz-sprite>
               </div>
               <div class="pokemon-details">
                 <div class="pokemon-name">{{ pokemon.name }}</div>
@@ -54,7 +54,7 @@
             <div class="pokemon-info">
               <div class="pokemon-tier">{{ pokemon.tier }}</div>
               <div class="sprite-wrapper small">
-                <sprite [pokemon]="pokemon"></sprite>
+                <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
               </div>
               <div class="pokemon-details">
                 <div class="pokemon-name">{{ pokemon.name }}</div>
